--- a/assets/stylesheets/application/elements/layout.scss
+++ b/assets/stylesheets/application/elements/layout.scss
@@ -8,7 +8,7 @@ body {
   }
 
   > .main, > .wrapper > .main {
-    margin-top: $content-margin-top;
+    padding-top: $content-padding-top;
     padding-bottom: $content-padding-bottom;
   }
 
