--- a/app/views/layouts/sidebar.slim
+++ b/app/views/layouts/sidebar.slim
@@ -1,7 +1,7 @@
 = content_for :content do
   .wrapper
     aside.sidebar
-      i.close.fa.fa-close.visible-xs
+      i.close.fa.fa-close
       = yield :sidebar
     .main.container
       = yield
