--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -1,6 +1,9 @@
-@import 'elements/layout';
 @import 'elements/navbar';
 @import 'elements/footer';
 @import 'elements/sidebar';
 @import 'elements/wait-mask';
-@import 'elements/actions';
+@import 'elements/buttons';
+@import 'elements/headers';
+
+// TODO temporary
+@import 'elements/navbar-user-selection';
