--- a/assets/stylesheets/global.scss
+++ b/assets/stylesheets/global.scss
@@ -3,6 +3,7 @@
 @import 'base/libraries';
 @import 'base/mixins';
 
+@import 'application/layout';
 @import 'application/elements';
 
-@import 'application/front_page';
+@import 'application/change_requests';
