--- a/assets/stylesheets/application/elements/footer.scss
+++ b/assets/stylesheets/application/elements/footer.scss
@@ -5,7 +5,7 @@ footer {
   background-color: $footer-bg;
   color: $footer-color;
 
-  p {
+  .copyright {
     padding: 30px;
     text-align: center;
   }
