--- a/app/views/change_requests/index/_header.slim
+++ b/app/views/change_requests/index/_header.slim
@@ -4,9 +4,9 @@ hr
 .actions
   button.btn.btn-primary type="button"
     i.fa.fa-plus
-    span New Change Request
+    span create new
   button.btn.btn-info type="button"
     i.fa.fa-search
-    span existing Change Request
+    span add existing
 
 hr
