--- a/assets/stylesheets/application/change_requests/index.scss
+++ b/assets/stylesheets/application/change_requests/index.scss
@@ -1,3 +1,5 @@
+@import "index/change-requests";
+
 .change_requests.index {
   .sidebar {
     @include display(flex);
@@ -7,24 +9,6 @@
       @include align-self(center);
       text-align: center;
       font-size: 3em;
-    }
-  }
-
-  .change-requests {
-    .icons,
-    .id,
-    .updated-at,
-    .contributed-at {
-      display: none;
-    }
-
-    @media all and(min-width: $screen-sm-min) {
-      .icons,
-      .id,
-      .updated-at,
-      .contributed-at {
-        display: table-cell;
-      }
     }
   }
 }
