--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -4,6 +4,7 @@
 @import 'elements/wait-mask';
 @import 'elements/buttons';
 @import 'elements/headers';
+@import 'elements/icons';
 
 // TODO temporary
 @import 'elements/navbar-user-selection';
