--- a/assets/stylesheets/base/variables.scss
+++ b/assets/stylesheets/base/variables.scss
@@ -1,3 +1,6 @@
+/* Needed by font-awesome setup */
+$fa-font-path: "/assets/fonts";
+
 /* Colors */
 $etsi-blue: #007dc3;
 $etsi-green: rgba(123, 178, 56, 1);
