Add more tile styles

--- a/app/views/change_requests/index/_tile_body.slim
+++ b/app/views/change_requests/index/_tile_body.slim
@@ -1,4 +1,40 @@
-.id= change_request.id
-.status= change_request.status
-.updated-at= change_request.updated_at
-.contributed-at= change_request.contributed_at
+.details
+  dl.id
+    dt ID
+    dd= change_request.id
+  dl.status
+    dt Status
+    dd= change_request.status
+  dl.updated-at
+    dt Updated at
+    dd= change_request.updated_at
+  dl.contributed-at
+    dt Contributed at
+    dd= change_request.contributed_at
+.details
+  dl.id
+    dt ID
+    dd= change_request.id
+  dl.status
+    dt Status
+    dd= change_request.status
+  dl.updated-at
+    dt Updated at
+    dd= change_request.updated_at
+  dl.contributed-at
+    dt Contributed at
+    dd= change_request.contributed_at
+.details
+  dl.id
+    dt ID
+    dd= change_request.id
+  dl.status
+    dt Status
+    dd= change_request.status
+  dl.updated-at
+    dt Updated at
+    dd= change_request.updated_at
+  dl.contributed-at
+    dt Contributed at
+    dd= change_request.contributed_at
+
