--- a/assets/stylesheets/application/change_requests/index/tiles.scss
+++ b/assets/stylesheets/application/change_requests/index/tiles.scss
@@ -3,8 +3,10 @@
 .tiles {
 
   .tile-status {
+    margin: 2em 0;
+
     span {
-      font-size: 1em;
+      font-size: .8em;
       text-transform: uppercase;
     }
 
@@ -32,5 +34,10 @@
     }
   }
 
+  @media all and(min-width: $screen-sm-min) {
+    .tile-status {
+      letter-spacing: 15px;
+    }
+  }
 }
 
