--- a/app/views/change_requests/index/_tile_body.slim
+++ b/app/views/change_requests/index/_tile_body.slim
@@ -2,39 +2,42 @@
   dl.id
     dt ID
     dd= change_request.id
-  dl.status
-    dt Status
-    dd= change_request.status
+  dl.author
+    dt Author
+    dd= change_request.author.full_name
   dl.updated-at
     dt Updated at
     dd= change_request.updated_at
-  dl.contributed-at
-    dt Contributed at
-    dd= change_request.contributed_at
+  - if change_request.contributed_at.present?
+    dl.contributed-at
+      dt Contributed at
+      dd= change_request.contributed_at
 .details
   dl.id
     dt ID
     dd= change_request.id
-  dl.status
-    dt Status
-    dd= change_request.status
+  dl.author
+    dt Author
+    dd= change_request.author.full_name
   dl.updated-at
     dt Updated at
     dd= change_request.updated_at
-  dl.contributed-at
-    dt Contributed at
-    dd= change_request.contributed_at
+  - if change_request.contributed_at.present?
+    dl.contributed-at
+      dt Contributed at
+      dd= change_request.contributed_at
 .details
   dl.id
     dt ID
     dd= change_request.id
-  dl.status
-    dt Status
-    dd= change_request.status
+  dl.author
+    dt Author
+    dd= change_request.author.full_name
   dl.updated-at
     dt Updated at
     dd= change_request.updated_at
-  dl.contributed-at
-    dt Contributed at
-    dd= change_request.contributed_at
+  - if change_request.contributed_at.present?
+    dl.contributed-at
+      dt Contributed at
+      dd= change_request.contributed_at
 
