--- a/app/views/change_requests/index/_tile_header.slim
+++ b/app/views/change_requests/index/_tile_header.slim
@@ -1,6 +1,5 @@
 .specification
   i.fa.fa-file-text
   span= change_request.specification
-.author
-  i.fa.fa-user
-  span= change_request.author.full_name
+.title
+  span= change_request.title
