--- a/app/views/change_requests/index/_tile_actions.slim
+++ b/app/views/change_requests/index/_tile_actions.slim
@@ -6,6 +6,6 @@
     i.fa.fa-share
     span Contribute
 .secondary
-  a href="#"
+  a.toggle-more-actions href="#"
     span More Actions
     i.fa.fa-caret-down
