--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -3,6 +3,7 @@
 @import 'elements/sidebar';
 @import 'elements/wait-mask';
 @import 'elements/buttons';
+@import 'elements/inputs';
 @import 'elements/headers';
 @import 'elements/icons';
 
