--- a/assets/stylesheets/application/change_requests/index.scss
+++ b/assets/stylesheets/application/change_requests/index.scss
@@ -1,14 +1,30 @@
 @import "index/change-requests";
 
 .change_requests.index {
-  .sidebar {
-    @include display(flex);
+  $header-margin: 4em 0;
 
-    .showcase {
-      @include flex(1);
-      @include align-self(center);
-      text-align: center;
-      font-size: 3em;
+  .workspace > header {
+    margin: $header-margin;
+
+    h1 {
+      font-size: 2em;
+      margin: 0;
+    }
+
+    .input-group {
+      margin: 1em;
+    }
+  }
+
+  @media all and(min-width: $screen-sm-min) {
+    .workspace > header {
+      h1 {
+        font-size: 3em;
+      }
+
+      .input-group {
+        margin: .5em 0 0 0;
+      }
     }
   }
 }
