--- a/assets/stylesheets/application/change_requests/index/tile.scss
+++ b/assets/stylesheets/application/change_requests/index/tile.scss
@@ -10,6 +10,7 @@
   $tile-header-bg: $sidebar-bg;
   $tile-header-color: $porcelain;
   $tile-header-padding: 1em;
+  $tile-header-padding-sm: 1em 2em;
 
   $tile-body-padding: 1em;
   $details-dl-padding: .5em;
