Add document master action

--- a/app/views/change_requests/index/_tile_actions.slim
+++ b/app/views/change_requests/index/_tile_actions.slim
@@ -2,9 +2,12 @@
   button.btn.btn-primary type="button"
     i.fa.fa-edit
     span Edit
-  button.btn.btn-info type="button"
+  button.btn.btn-primary type="button"
     i.fa.fa-share
     span Contribute
+  button.btn.btn-info type="button"
+    i.fa.fa-file
+    span Show Master
 .secondary
   a.toggle-more-actions href="#"
     span More Actions
