Integrate respec-based master document page

--- a/app/views/change_requests/index/_tile_actions.slim
+++ b/app/views/change_requests/index/_tile_actions.slim
@@ -5,7 +5,7 @@
   button.btn.btn-primary type="button"
     i.fa.fa-share
     span Contribute
-  button.btn.btn-info type="button"
+  a.btn.btn-info href="#{change_requests_path}/#{change_request.friendly_id}/master"
     i.fa.fa-file
     span Show Master
 .secondary
