--- a/assets/stylesheets/application/change_requests/index/tile-header.scss
+++ b/assets/stylesheets/application/change_requests/index/tile-header.scss
@@ -15,6 +15,10 @@ header {
 
   font-size: 1.25em;
 
+  .specification a {
+    color: $tile-header-color;
+  }
+
   .toggle {
     @include flex(1);
     text-align: right;
