Add contributions page

--- a/app/views/change_requests/index/_more_actions.slim
+++ b/app/views/change_requests/index/_more_actions.slim
@@ -12,17 +12,13 @@
 .action-set
   ul
     li
-      a.history
+      a.history href="#"
         span Show History
         i.fa.fa-file
-  dl.compare
-    dt Compare:
-    dd
-      ul
-        li
-          a.modifications href="#" My modifications
-        li
-          a.other-version href="#" With other version
+    li
+      a.history href="#"
+        span Compare
+        i.fa.fa-arrows-h
 
 .action-set
   ul
