--- a/app/views/change_requests/index/_tile_actions.slim
+++ b/app/views/change_requests/index/_tile_actions.slim
@@ -2,13 +2,6 @@
   button.btn.btn-primary type="button"
     i.fa.fa-edit
     span Edit
-  button.btn.btn-primary type="button"
+  button.btn.btn-info type="button"
     i.fa.fa-share
     span Contribute
-  a.btn.btn-info href="#{change_requests_path}/#{change_request.friendly_id}/master"
-    i.fa.fa-file
-    span Show Master
-.secondary
-  a.toggle-more-actions href="#"
-    span More Actions
-    i.fa.fa-caret-down
