--- a/assets/stylesheets/application/change_requests/contributions.scss
+++ b/assets/stylesheets/application/change_requests/contributions.scss
@@ -3,23 +3,22 @@
 .change_requests.contributions {
 
   .main.container {
-    @include size(100%);
+    width: 100%;
     padding: 0;
     margin: 0;
+    @include display(flex);
   }
 
-  iframe.document {
+  .document {
     @include flex(2);
-    border: none;
+
+    iframe {
+      @include size(100%);
+      border: none;
+    }
   }
 
   .contributions {
     @include flex(1);
-  }
-
-  .contributions-container {
-    min-height: 100%;
-    @include display(flex);
-    @include flex-flow(row wrap);
   }
 }
