--- a/assets/stylesheets/application/change_requests/contributions.scss
+++ b/assets/stylesheets/application/change_requests/contributions.scss
@@ -1,16 +1,16 @@
-@import "contributions/contributions";
 
 .change_requests.contributions {
+
+  @import "contributions/contributions";
 
   .main.container {
     width: 100%;
     padding: 0;
     margin: 0;
-    @include display(flex);
   }
 
   .document {
-    @include flex(2);
+    height: 100vh;
 
     iframe {
       @include size(100%);
@@ -18,7 +18,19 @@
     }
   }
 
-  .contributions {
-    @include flex(1);
+  @media all and(min-width: $screen-sm-min) {
+    .main.container {
+      height: inherit;
+      @include display(flex);
+    }
+
+    .document {
+      height: inherit;
+      @include flex(2);
+    }
+
+    .contributions {
+      @include flex(1);
+    }
   }
 }
