CSS fixes as indicated by smnice

--- a/app/views/documents/master_edit.html.erb
+++ b/app/views/documents/master_edit.html.erb
@@ -3,7 +3,7 @@
   <head>
     <%= render "/documents/master_head" %>
     <style>
-      html, body, body > .mce-container {
+      html, body, body > .mce-tinymce {
         margin: 0;
         border: 0;
         width: 100%;
