--- a/app/views/documents/master_edit.html.erb
+++ b/app/views/documents/master_edit.html.erb
@@ -9,10 +9,13 @@
         width: 100%;
         height: 100%;
       }
+      textarea.document {
+        display: none;
+      }
     </style>
   </head>
   <body>
-    <textarea id="document" class="document">
+    <textarea class="document">
 	<%= render "/documents/master_body" %>
     </textarea>
 
@@ -43,7 +46,7 @@
       var iframeHeight = document.body.offsetHeight;
 
       tinymce.init({
-	selector: "textarea#document",
+	selector: "textarea.document",
 	theme: "modern",
         width: "100%",
         height: iframeHeight - 130,
