--- a/app/views/change_requests/index/_more_actions.slim
+++ b/app/views/change_requests/index/_more_actions.slim
@@ -23,6 +23,10 @@
 .action-set
   ul
     li
+      a.contribute href="#"
+        span Contribute
+        i.fa.fa-send
+    li
       a.delete href="#"
         span Delete
         i.fa.fa-remove
