--- a/app/views/change_requests/index/_tile_header.slim
+++ b/app/views/change_requests/index/_tile_header.slim
@@ -2,7 +2,11 @@
   i.fa.fa-file-text
   = link_to "#{change_request.specification} - #{change_request.title}",
     contributions_change_request_path(id: change_request.friendly_id)
-.toggle
-  a
-    span More&hellip;
-    i.fa
+.tile-actions
+
+  a.btn.btn-primary href="#{edit_change_request_path(id: change_request.friendly_id)}" type="button"
+    i.fa.fa-edit
+    span Edit
+  .toggle
+    a
+      i.toggle-icon.fa
