Mark change requests authored by user

--- a/app/views/change_requests/index.slim
+++ b/app/views/change_requests/index.slim
@@ -2,5 +2,8 @@ section.workspace
   header
     = render "/change_requests/index/header"
 
+  section.legend
+    = render "/change_requests/index/legend"
+
   section.change-requests
     = render "/change_requests/index/tiles"
