--- a/assets/stylesheets/base/variables.scss
+++ b/assets/stylesheets/base/variables.scss
@@ -7,6 +7,7 @@ $etsi-green: rgba(123, 178, 56, 1);
 $lynch: #6c7a89;
 $gray: #848d93;
 $porcelain: #ecf0f1;
+$confetti: #e9d460;
 
 $gossip: #87d37c;
 $eucalyptus: #26a65b;
