--- a/assets/stylesheets/application/change_requests/index/tile.scss
+++ b/assets/stylesheets/application/change_requests/index/tile.scss
@@ -12,6 +12,7 @@
   $tile-header-padding: 1em;
   $tile-header-padding-sm: 1em 2em;
   $tile-specification-padding: .5em 0 0 0;
+  $authored-by-user-color: $confetti;
   $tile-actions-btn-padding: .7em 1.5em;
   $tile-actions-margin: 1em;
   $tile-actions-margin-sm: 0;
