Implement status matrix

--- a/app/views/change_requests/index/_legend.slim
+++ b/app/views/change_requests/index/_legend.slim
@@ -1,6 +1,6 @@
 .item
   i.authored-by-user.fa.fa-user
-  span authored by user
+  span authored by me
 .item
   i.fa.fa-file-text
   span authored by someone else
