--- a/app/views/change_requests/index/_tile_header.slim
+++ b/app/views/change_requests/index/_tile_header.slim
@@ -7,9 +7,10 @@
     contributions_change_request_path(id: change_request.friendly_id)
 .tile-actions
 
-  a.btn.btn-primary href="#{edit_change_request_path(id: change_request.friendly_id)}" type="button"
-    i.fa.fa-edit
-    span Edit
+  - if change_request.editable?
+    a.btn.btn-primary href="#{edit_change_request_path(id: change_request.friendly_id)}" type="button"
+      i.fa.fa-edit
+      span Edit
   .toggle
     a
       i.toggle-icon.fa
