--- a/app/views/change_requests/index/_tiles.slim
+++ b/app/views/change_requests/index/_tiles.slim
@@ -1,3 +1,4 @@
-- @change_requests.group(:status).each do |(status, crs)|
-  = render partial: "/change_requests/index/tile_section",
-    locals: { status: status, change_requests: crs }
+- ChangeRequest::Status.all.values.each_with_object(@change_requests.group(:status)) do |status, grouped|
+  - if grouped[status]
+    = render partial: "/change_requests/index/tile_section",
+      locals: { status: status, change_requests: grouped[status] }
