Update change request properties. Add dummy pages for creating and adding them.

--- a/app/views/change_requests/index/_header.slim
+++ b/app/views/change_requests/index/_header.slim
@@ -8,10 +8,10 @@
 hr
 
 .actions
-  button.btn.btn-primary type="button"
+  a.btn.btn-primary href="#{new_change_request_path}" type="button"
     i.fa.fa-plus
     span create new
-  button.btn.btn-info type="button"
+  a.btn.btn-info href="#{add_existing_change_requests_path}" type="button"
     i.fa.fa-search
     span add existing
 
