--- a/app/views/change_requests/index/_legend.slim
+++ b/app/views/change_requests/index/_legend.slim
@@ -2,5 +2,5 @@
   i.authored-by-user.fa.fa-user
   span authored by me
 .item
-  i.fa.fa-file-text
+  i.fa.fa-users
   span authored by someone else
