Rename hide CSS class

--- a/app/views/change_requests/index/_more_actions.slim
+++ b/app/views/change_requests/index/_more_actions.slim
@@ -49,6 +49,6 @@
           i.fa.fa-remove
     - if change_request.hideable?
       li
-        a.hide href="#"
+        a.remove href="#"
           span Hide
           i.fa.fa-minus-square
