--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -3,7 +3,9 @@
 @import 'elements/sidebar';
 @import 'elements/wait-mask';
 @import 'elements/buttons';
+@import 'elements/select-control';
 @import 'elements/inputs';
+@import 'elements/forms';
 @import 'elements/headers';
 @import 'elements/icons';
 
